--- a/src/css/common.css
+++ b/src/css/common.css
@@ -17,3 +17,26 @@ img {
   max-width: 100%;
 }
 
+.timer{
+  display: flex;
+  gap: 20px;
+  text-transform: uppercase;
+}
+
+.field{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.value{
+  font-weight: 600;
+  font-size: 44px;
+}
+
+.label{
+  font-weight: 600;
+}
+
+
